WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87930
[GTK] Fix webkit_web_view_can_execute_editing_command() API doc
https://bugs.webkit.org/show_bug.cgi?id=87930
Summary
[GTK] Fix webkit_web_view_can_execute_editing_command() API doc
Carlos Garcia Campos
Reported
2012-05-30 23:44:39 PDT
Return value refers to cut command
Attachments
Patch
(1.30 KB, patch)
2012-05-30 23:45 PDT
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-05-30 23:45:47 PDT
Created
attachment 144996
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-30 23:47:17 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2012-05-31 08:27:41 PDT
Committed
r119106
: <
http://trac.webkit.org/changeset/119106
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug