[GTK] Fix webkit_web_view_can_execute_editing_command() API doc https://bugs.webkit.org/show_bug.cgi?id=87930

Reviewed by Martin Robinson.

* UIProcess/API/gtk/WebKitWebView.cpp:

Canonical link: https://commits.webkit.org/105804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119106 268f45cc-cd09-0410-ab3c-d52691b4dbfc